[gd_scene load_steps=14 format=3 uid="uid://dufu18txo30g7"]

[ext_resource type="Script" uid="uid://bfx13nf07gn5r" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://cms46bhii5n7p" path="res://assets/background_2.jpg" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://dtil27cxmnbj5" path="res://scenes/bird.tscn" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://dnxq378xjqx84" path="res://assets/ground.png" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cm1shgg6wygj1" path="res://scenes/pipe_spawner.tscn" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://f44y1v722iw8" path="res://assets/numbers/0.png" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://be6y76x7ea1i2" path="res://scripts/flash.gd" id="7_tipki"]
[ext_resource type="FontFile" uid="uid://cn348ave2w0ub" path="res://assets/fonts/FlappyBirdRegular.ttf" id="8_tipki"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(700, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(713, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(0, 0, 0, 0.13333334)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 20
shadow_size = 5
shadow_offset = Vector2(3, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.7792914, 0.7792914, 0.7792912, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="bg_1" type="Sprite2D" parent="."]
position = Vector2(463, 457)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tbgi4")

[node name="bg_2" type="Sprite2D" parent="."]
position = Vector2(1389, 457)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tbgi4")

[node name="bg_3" type="Sprite2D" parent="."]
position = Vector2(2315, 457)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tbgi4")

[node name="PipeSpawner" parent="." instance=ExtResource("6_tefeu")]

[node name="Bird" parent="." instance=ExtResource("3_sugp2")]
position = Vector2(294, 430)

[node name="flo_1" type="Sprite2D" parent="."]
position = Vector2(463, 879)
scale = Vector2(1.10238, 0.3)
texture = ExtResource("5_tbgi4")

[node name="flo_2" type="Sprite2D" parent="."]
position = Vector2(1389, 879)
scale = Vector2(1.10238, 0.3)
texture = ExtResource("5_tbgi4")

[node name="flo_3" type="Sprite2D" parent="."]
position = Vector2(2315, 879)
scale = Vector2(1.10238, 0.3)
texture = ExtResource("5_tbgi4")

[node name="floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(350, 853)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="roof" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="roof"]
position = Vector2(349.5, -5)
shape = SubResource("RectangleShape2D_sugp2")

[node name="Flash" type="ColorRect" parent="."]
offset_right = 600.0
offset_bottom = 924.0
color = Color(1, 1, 1, 0)
script = ExtResource("7_tipki")

[node name="Score_one" type="Sprite2D" parent="."]
position = Vector2(303.99997, 104)
scale = Vector2(1.167, 1.167)
texture = ExtResource("7_o6xl0")

[node name="Score_ten" type="Sprite2D" parent="."]
position = Vector2(269, 104.00001)
scale = Vector2(1.167, 1.167)
texture = ExtResource("7_o6xl0")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="DeadScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 600.0
offset_bottom = 900.0

[node name="Panel" type="Panel" parent="DeadScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_85g3d")

[node name="ScoreContainer" type="VBoxContainer" parent="DeadScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = 192.0
offset_right = -43.0
offset_bottom = -408.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CurScore" type="Label" parent="DeadScreen/ScoreContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_tipki")
theme_override_font_sizes/font_size = 48

[node name="HighScore" type="Label" parent="DeadScreen/ScoreContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_tipki")
theme_override_font_sizes/font_size = 48

[node name="VBoxContainer" type="VBoxContainer" parent="DeadScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.125
offset_top = -81.0
offset_right = 100.125
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="RestartButton" type="Button" parent="DeadScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tipki")
theme_override_styles/hover = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/focus = SubResource("StyleBoxFlat_o6xl0")
text = "Restart
"

[node name="MenuButton" type="Button" parent="DeadScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tipki")
theme_override_styles/hover = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/focus = SubResource("StyleBoxFlat_o6xl0")
text = "Exit"

[connection signal="pressed" from="DeadScreen/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="DeadScreen/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
